--- a/style.css
+++ b/style.css
@@ -1,8 +1,45 @@
+
+img {
+    border-radius: 4px;
+}
+
+html {
+    scroll-behavior: smooth;
+    background-color: aliceblue;
+}
+
+body {
+    background-color: aliceblue;    
+}
+
+main {
+    background-color: aliceblue;
+}
+
+.header {
+    height: 4em;
+    background-color: rgb(121, 121, 204);
+}
+
+
+.header i{
+    color: rgb(255, 255, 255);
+    margin: .5em;
+    font-size: xx-large;
+}
+
 .quartos {
     max-width: 20em;
     max-height: 13em;
 }
 
-label {
-    display: block;
+.room {
+    text-align: center;
+   
+}
+
+.card i {
+    font-size: 3em;
+    margin-top: .4em;
+    margin-right: .5em;
 }
