--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ img {
     border-radius: 4px;
 }
 
+.about {
+    margin-top: 4em;
+}
+
+.home {
+    padding-top: 2em;
+    text-align: center;
+}
+
 html {
     scroll-behavior: smooth;
     background-color: aliceblue;
@@ -17,8 +26,14 @@ main {
 }
 
 .header {
+    margin-bottom: 4em;
     height: 4em;
     background-color: rgb(121, 121, 204);
+}
+
+.reserve {
+    margin-top: 5em;
+    padding-bottom: 5em;
 }
 
 
@@ -29,8 +44,8 @@ main {
 }
 
 .quartos {
-    max-width: 20em;
-    max-height: 13em;
+    width: 90%;
+    
 }
 
 .room {
@@ -42,4 +57,17 @@ main {
     font-size: 3em;
     margin-top: .4em;
     margin-right: .5em;
+}
+
+.rooms {
+
+    margin-top: 3em;    
+}
+
+.text-card {
+    font-size: medium;
+}
+
+h2 {
+    font-size: medium;
 }
